# GitHound

./: .env.example  .env.example.security  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENHANCEMENT_SUMMARY.md  FASTMCP_2X_INTEGRATION_SUMMARY.md  Makefile  README.md  REFACTORING_SUMMARY.md  WARP.md  build.ps1  build.sh  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  find_fstring_issue.py  main.py  mkdocs.yml  mock_rapidfuzz.py  mypy.ini  pyproject.toml  pytest.ini  simple_test_runner.py  test_implementation.py  test_setup_verification.py
.augment/rules/: BuildAndFix.md  CheckAndFix.md  FixAndCommit.md  MypyAll.md  RemoveUseless.md  TestAndFix.md  UpdateDocs.md  UpdateGitignore.md  UpdateTests.md
.claude/: settings.local.json
.github/: CODEOWNERS  README.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_maintenance.yml  feature_request.yml
.github/workflows/: auto-fix.yml  canary-deploy.yml  ci.yml  codeql.yml  docs-validation.yml  metrics.yml  pr-automation.yml  staging-deploy.yml  web-frontend-tests.yml
docker/: README.md  build-multiarch.sh  buildx-setup.sh
docker/nginx/: nginx.conf
docs/: TESTING.md  cli-enhancements.md  gen_ref_pages.py  index.md  mcp_integration.md  mypy_and_performance_report.md
docs/api-reference/: openapi.md  python-api.md  rest-api.md  websocket-api.md
docs/architecture/: data-models.md  git-handlers.md  overview.md  search-engine.md
docs/auth/: README.md  TYPE_FIXES.md
docs/development/: contributing.md  release-process.md  testing.md  type-checking.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/javascripts/: mathjax.js
docs/mcp/: FASTMCP_2X_MIGRATION.md  FASTMCP_2X_UPGRADE.md  README.md
docs/mcp-server/: README.md  configuration.md  integration-examples.md  overview.md  setup.md  tools-reference.md
docs/stylesheets/: extra.css
docs/troubleshooting/: README.md  faq.md
docs/user-guide/: cli-usage.md  export-options.md  search-capabilities.md  web-interface.md
examples/: README.md  search_optimization_demo.py
examples/auth/: authentication_demo.py  configuration_examples.py
examples/authorization/: eunomia_example.py  permit_example.py
examples/error_handling/: README.md
examples/git_operations/: README.md  commit_analysis.py  repository_analysis.py
examples/mcp/: README.md  basic_usage.py  claude_desktop_config.json  claude_desktop_mcp.json  cursor_mcp.json  fastmcp_2x_features.py  fastmcp_compatible.json  mcp.json  mcp_with_auth.json
examples/mcp_server/: README.md  requirements.txt
examples/output_formats/: README.md  json_output.py
examples/rest_api/: README.md  basic_usage.py  rest_basic_usage.py
examples/workflows/: README.md
githound/: __init__.py  _version.py  cli.py  git_blame.py  git_diff.py  git_handler.py  mcp_server.py  models.py  schemas.py  searcher.py
githound/mcp/: __init__.py  auth.py  auth_manager.py  config.py  context_helpers.py  direct_wrappers.py  models.py  prompts.py  resources.py  server.py
githound/search_engine/: README.md  __init__.py  _pandas_compat.py  analytics.py  base.py  bm25_ranker.py  branch_searcher.py  cache.py  commit_searcher.py  diff_searcher.py  enhanced_orchestrator.py  factory.py  file_searcher.py  fuzzy_searcher.py  history_searcher.py  indexer.py  orchestrator.py  pattern_searcher.py  performance_monitor.py  query_optimizer.py  ranking_engine.py  registry.py  result_processor.py  searcher.py  statistical_searcher.py  tag_searcher.py
githound/utils/: README.md  __init__.py  cli_display.py  export.py  progress.py  version.py
githound/web/: API_README.md  ENHANCEMENT_SUMMARY.md  README.md  __init__.py  analysis_api.py  api.py  auth.py  comprehensive_api.py  enhanced_api.py  enhanced_main_api.py  git_operations.py  integration_api.py  main.py  models.py  rate_limiting.py  search_api.py  server.py  webhooks.py  websocket.py
scripts/: README.md  analyze_coverage.py  benchmark.py  cache-manager.py  dev-env.py  docker-deploy.ps1  docker-deploy.sh  fix_syntax_errors.py  health-check.py  integration-example.py  quick-start.py  run.py  run_mcp_tests.py  services.py  setup_validation.py  test-basic.py  validate_all_docs.py  validate_config_examples.py  validate_docs_examples.py  validate_documentation.py  validate_links.py  validation-config.yaml  verify_refactor.py  version_manager.py
scripts/script_utils/: __init__.py  colors.py  colors_simple.py  common.py  platform.py
scripts/utils/: __init__.py  colors.py  colors_simple.py  common.py  platform.py
scripts/wrappers/: cache-manager.bat  cache-manager.sh  dev-env.bat  dev-env.sh  health-check.bat  health-check.sh  quick-start.bat  quick-start.sh  services.bat  services.sh
tests/: README.md  TESTING_GUIDELINES.md  conftest.py  test_authorization_providers.py  test_cli.py  test_cli_blame_output.py  test_cli_display.py  test_cli_simple.py  test_cli_working.py  test_enhanced_api.py  test_git_blame.py  test_git_diff.py  test_git_enhancements.py  test_git_handler.py  test_git_handler_working.py  test_mcp_authentication.py  test_mcp_fastmcp2x.py  test_mcp_fastmcp_patterns.py  test_mcp_integration.py  test_mcp_json_config.py  test_mcp_performance.py  test_mcp_server.py  test_mcp_working.py  test_models.py  test_schemas.py  test_search_engine.py  test_search_engine_working.py  test_searcher.py  test_structured_output.py
tests/auth/: test_auth_core.py  test_auth_providers.py  test_factory.py  test_integration.py
tests/e2e/: test_complete_workflows.py
tests/fixtures/: README.md  cli_fixtures.py  search_fixtures.py
tests/integration/: README.md  test_analysis_api.py  test_end_to_end_workflows.py  test_repository_api.py  test_search_api.py
tests/performance/: README.md  test_git_performance.py  test_load_testing.py
tests/search_engine/: __init__.py  test_analytics.py  test_analytics_basic.py  test_analytics_comprehensive.py  test_base.py  test_cache_basic.py  test_cache_comprehensive.py  (+8 more)
(+204 files in other folders)
