[project]
name = "githound"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ripgrepy",
    "GitPython",
    "typer",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "rapidfuzz>=3.0.0",
    "redis>=4.5.0",
    "diskcache>=5.6.0",
    "pandas>=2.0.0",
    "websockets>=11.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0.0",
    "fastmcp>=0.9.0",
]

[project.scripts]
githound = "githound.cli:app"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = false
plugins = ["pydantic.mypy"]
exclude = ["build/", "githound.egg-info/"]

# Per-module options
[[tool.mypy.overrides]]
module = [
    "ripgrepy.*",
    "diskcache.*",
    "redis.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "types-pyyaml>=6.0.12.20250809",
]
